--- a/clients/openai-go/tests/Dockerfile
+++ b/clients/openai-go/tests/Dockerfile
@@ -3,7 +3,10 @@
 FROM golang:1.25.1-alpine AS test-runner
 
 # Install system dependencies
-RUN apk --no-cache add ca-certificates git
+RUN apk --no-cache add ca-certificates git curl
+
+# Install gotestsum
+RUN go install gotest.tools/gotestsum@latest
 
 WORKDIR /app
 
@@ -16,12 +19,15 @@ WORKDIR /app/clients/openai-go
 # Download dependencies
 RUN go mod download
 
-# Copy test files
+# Copy test files and scripts
 COPY clients/openai-go/tests/ ./tests/
 
 # Copy test assets
 COPY tensorzero-core/tests/e2e/providers/ferris.png ./tensorzero-core/tests/e2e/providers/ferris.png
 COPY tensorzero-core/tests/e2e/providers/deepseek_paper.pdf ./tensorzero-core/tests/e2e/providers/deepseek_paper.pdf
 
+# Make the test script executable
+RUN chmod +x ./tests/run-tests.sh
+
 # Run the tests
-CMD ["go", "test", "-v", "./tests/..."]
+CMD ["./tests/run-tests.sh"]
