--- a/clients/docker-compose.tests.yml
+++ b/clients/docker-compose.tests.yml
@@ -203,7 +203,6 @@ services:
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
       TENSORZERO_MINIO_URL: http://minio:9000
       TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
-      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       TMPDIR: /tmp
       # API Keys
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-dummy}
@@ -239,6 +238,13 @@ services:
       XAI_API_KEY: ${XAI_API_KEY:-dummy}
       # Buildkite analytics
       BUILDKITE_ANALYTICS_TOKEN: ${BUILDKITE_ANALYTICS_TOKEN:-}
+      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
+      BUILDKITE_BRANCH: ${BUILDKITE_BRANCH:-}
+      BUILDKITE_JOB_ID: ${BUILDKITE_JOB_ID:-}
+      BUILDKITE_BUILD_ID: ${BUILDKITE_BUILD_ID:-}
+      BUILDKITE_MESSAGE: ${BUILDKITE_MESSAGE:-}
+      BUILDKITE_BUILD_NUMBER: ${BUILDKITE_BUILD_NUMBER:-}
+      BUILDKITE_BUILD_URL: ${BUILDKITE_BUILD_URL:-}
     volumes:
       # Mount test configuration and fixtures
       - ../tensorzero-core/tests:/app/tensorzero-core/tests:ro
@@ -274,11 +280,17 @@ services:
       TENSORZERO_MINIO_URL: http://minio:9000
       TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
       TENSORZERO_E2E_PROXY: http://provider-proxy:3003
-      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       # API Keys
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       # Buildkite analytics
       BUILDKITE_ANALYTICS_TOKEN: ${BUILDKITE_ANALYTICS_TOKEN:-}
+      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
+      BUILDKITE_BRANCH: ${BUILDKITE_BRANCH:-}
+      BUILDKITE_JOB_ID: ${BUILDKITE_JOB_ID:-}
+      BUILDKITE_BUILD_ID: ${BUILDKITE_BUILD_ID:-}
+      BUILDKITE_MESSAGE: ${BUILDKITE_MESSAGE:-}
+      BUILDKITE_BUILD_NUMBER: ${BUILDKITE_BUILD_NUMBER:-}
+      BUILDKITE_BUILD_URL: ${BUILDKITE_BUILD_URL:-}
     depends_on:
       gateway:
         condition: service_healthy
@@ -305,11 +317,17 @@ services:
       TENSORZERO_MINIO_URL: http://minio:9000
       TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
       TENSORZERO_E2E_PROXY: http://provider-proxy:3003
-      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
       # API Keys
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       # Buildkite analytics
       BUILDKITE_ANALYTICS_TOKEN: ${BUILDKITE_ANALYTICS_TOKEN:-}
+      BUILDKITE_COMMIT: ${BUILDKITE_COMMIT:-}
+      BUILDKITE_BRANCH: ${BUILDKITE_BRANCH:-}
+      BUILDKITE_JOB_ID: ${BUILDKITE_JOB_ID:-}
+      BUILDKITE_BUILD_ID: ${BUILDKITE_BUILD_ID:-}
+      BUILDKITE_MESSAGE: ${BUILDKITE_MESSAGE:-}
+      BUILDKITE_BUILD_NUMBER: ${BUILDKITE_BUILD_NUMBER:-}
+      BUILDKITE_BUILD_URL: ${BUILDKITE_BUILD_URL:-}
     volumes:
       # Mount test files and fixtures for image tests
       - ../tensorzero-core/tests:/app/tensorzero-core/tests:ro
