--- a/clients/openai-node/package.json
+++ b/clients/openai-node/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.6.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.36.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "buildkite-test-collector": "^1.9.1"
   }
 }
