--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "@eslint/js": "^9.30.1",
     "@hookform/resolvers": "^5.1.1",
     "@lobehub/icons": "^2.10.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@react-router/node": "^7.6.3",
     "@react-router/serve": "^7.6.3",
     "@tailwindcss/vite": "^4.1.11",
@@ -69,6 +70,7 @@
     "type-fest": "^4.41.0",
     "typescript-eslint": "^8.36.0",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
