Helm: Support ServiceMonitor creation
This PR enables users of the Helm chart to configure Prometheus scraping via the
[`ServiceMonitor`](https://prometheus-operator.dev/docs/developer/getting-started/#using-servicemonitors)
custom resource, defined and managed by [Prometheus Operator](https://prometheus-operator.dev).

--- a/examples/production-deployment-k8s-helm/values.yaml
+++ b/examples/production-deployment-k8s-helm/values.yaml
@@ -2,6 +2,11 @@
 nameOverride: ""
 fullnameOverride: ""
 
+monitoring:
+  enabled: false
+  interval: "30s"
+  labels: {}
+
 # Gateway Configuration
 gateway:
   replicaCount: 1
