Skip performing a local gateway build just for fixtures
We can just use a published image to initialize the database
to a state where we can insert fixtures. The actual test
run (e.g. live-tests) will start its own gateway, and run
any new migrations that have been added since the last release.

--- a/tensorzero-core/tests/e2e/docker-compose.replicated.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.replicated.yml
@@ -112,12 +112,10 @@ services:
       - "9411:9411"
 
   # This is not a gateway to use but rather one that just sets up migrations for the ClickHouse db
+  # If you need to add fixtures that reference newly-added database columns, you'll need to temporarily
+  # bump this to a locally-built image (or published 'sha' tag)
   gateway:
     image: tensorzero/gateway:${TENSORZERO_GATEWAY_TAG:-latest}
-    build:
-      context: ../../..
-      dockerfile: gateway/Dockerfile
-      target: gateway
     environment:
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse-01:8123/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests}
       TENSORZERO_CLICKHOUSE_CLUSTER_NAME: tensorzero_e2e_tests_cluster
