--- a/examples/production-deployment-k8s-helm/values.yaml
+++ b/examples/production-deployment-k8s-helm/values.yaml
@@ -59,6 +59,10 @@ gateway:
     #    hosts:
     #      - tensorzero-gateway.local
 
+    # Create legacy ingress with old naming pattern for zero-downtime upgrades
+    # Set to false after migrating DNS/load balancers to the new ingress name
+    createLegacyIngress: true
+
 # UI Configuration
 ui:
   deploy: true # TODO: change this to false if you don't want to deploy the UI
