--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -182,6 +182,9 @@ jobs:
         env:
           TENSORZERO_CI: 1
           TENSORZERO_CLICKHOUSE_URL: "http://chuser:chpassword@clickhouse:8123/tensorzero_ui_fixtures"
+          # These 2 vars are set so the env.server code doesn't complain
+          TENSORZERO_UI_CONFIG_PATH: "ui/fixtures/config/tensorzero.toml"
+          TENSORZERO_GATEWAY_URL: "placeholder" # these
         run: pnpm ui:test:e2e --grep-invert "@credentials"
 
       - name: Print Docker Compose logs
