--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -11,7 +11,7 @@ jobs:
     if: github.repository == 'tensorzero/tensorzero'
     steps:
       - run: echo "This is a dummy job to satisfy branch protection checks"
-  check-all-live-tests-passed:
+  merge-queue-checks:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: github.repository == 'tensorzero/tensorzero'
