--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -3,9 +3,7 @@ run-name: Merge Queue Checks for ${{ github.ref }}
 
 on:
   workflow_dispatch:
-  merge_group:
-    paths-ignore:
-      - "docs/**"
+  workflow_call:
   schedule:
     - cron: "0 0 * * *" # Runs at 00:00 UTC every day
 
