--- a/.github/workflows/build-gateway-container.yml
+++ b/.github/workflows/build-gateway-container.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-gateway-container:
-    runs-on: namespace-profile-tensorzero-2x8;overrides.cache-tag=build-gateway-cache
+    runs-on: ubuntu-latest
     if: github.repository == 'tensorzero/tensorzero'
 
     steps:
@@ -14,21 +14,15 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
+      - name: Configure Namespace-powered Buildx
+        uses: namespacelabs/nscloud-setup-buildx-action@84ca8c58fdf372d6a4750476cd09b7b96ee778ca
+
       - name: Build `gateway` container
         run: |
           docker build --build-arg BUILDKIT_CONTEXT_KEEP_GIT_DIR=1 -f gateway/Dockerfile . -t tensorzero/gateway:sha-${{ github.sha }}
 
       - name: Save `gateway` container
         run: docker save tensorzero/gateway:sha-${{ github.sha }} > gateway-container.tar
-
-      - name: Upload `gateway` container as an artifact to Namespace
-        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
-        with:
-          name: build-gateway-container
-          path: gateway-container.tar
-          retention-days: 1
-          if-no-files-found: error
-          overwrite: false
 
       - name: Upload `gateway` container as an artifact to Github
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
