--- a/.github/workflows/build-ui-container.yml
+++ b/.github/workflows/build-ui-container.yml
@@ -5,11 +5,17 @@ on:
 
 jobs:
   build-ui-container:
-    runs-on: namespace-profile-tensorzero-2x8;overrides.cache-tag=build-ui-cache
+    runs-on: ubuntu-latest
     if: github.repository == 'tensorzero/tensorzero'
 
     steps:
-      - uses: namespacelabs/nscloud-checkout-action@953fed31a6113cc2347ca69c9d823743c65bc84b
+      # TODO - investigate why using the Namespace checkout action causes
+      # 'tensorzero_core::built_info::GIT_COMMIT_HASH_SHORT' to be `None`
+      - name: Check out the repo
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Configure Namespace-powered Buildx
+        uses: namespacelabs/nscloud-setup-buildx-action@84ca8c58fdf372d6a4750476cd09b7b96ee778ca
 
       - name: Build `ui` container
         run: |
@@ -17,15 +23,6 @@ jobs:
 
       - name: Save `ui` container
         run: docker save tensorzero/ui:sha-${{ github.sha }} > ui-container.tar
-
-      - name: Upload `ui` container as an artifact to Namespace
-        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
-        with:
-          name: build-ui-container
-          path: ui-container.tar
-          retention-days: 1
-          if-no-files-found: error
-          overwrite: false
 
       - name: Upload `ui` container as an artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
