--- a/.github/workflows/build-ui-container.yml
+++ b/.github/workflows/build-ui-container.yml
@@ -7,6 +7,11 @@ jobs:
   build-ui-container:
     runs-on: ubuntu-latest
     if: github.repository == 'tensorzero/tensorzero'
+    permissions:
+      # Permission to checkout the repository
+      contents: read
+      # Permission to fetch GitHub OIDC token authentication
+      id-token: write
 
     steps:
       # TODO - investigate why using the Namespace checkout action causes
