--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -631,9 +631,19 @@ jobs:
 
   build-gateway-container:
     uses: ./.github/workflows/build-gateway-container.yml
+    permissions:
+      # Permission to checkout the repository
+      contents: read
+      # Permission to fetch GitHub OIDC token authentication
+      id-token: write
 
   build-ui-container:
     uses: ./.github/workflows/build-ui-container.yml
+    permissions:
+      # Permission to checkout the repository
+      contents: read
+      # Permission to fetch GitHub OIDC token authentication
+      id-token: write
 
   ui-tests:
     uses: ./.github/workflows/ui-tests.yml
