--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,8 @@
     "@codemirror/legacy-modes": "^6.5.1",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@eslint/js": "^9.30.1",
     "@hookform/resolvers": "^5.1.1",
     "@lobehub/icons": "^2.10.0",
