--- a/tensorzero-core/tests/e2e/docker-compose.live.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.live.yml
@@ -169,6 +169,8 @@ services:
       # Test environment variables
       TENSORZERO_GATEWAY_URL: http://gateway:3000
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero_e2e_tests
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/tensorzero_e2e_tests
+      TENSORZERO_POSTGRES_URL: postgres://postgres:postgres@postgres:5432/tensorzero_e2e_tests
       TENSORZERO_MINIO_URL: http://minio:9000
       TENSORZERO_MOCK_INFERENCE_PROVIDER_BASE_URL: http://mock-inference-provider:3030
       TENSORZERO_TEMPO_URL: http://tempo:16686
@@ -225,6 +227,8 @@ services:
       fixtures:
         condition: service_completed_successfully
       clickhouse:
+        condition: service_healthy
+      postgres:
         condition: service_healthy
       mock-inference-provider:
         condition: service_healthy
