--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -209,6 +209,9 @@ jobs:
         run: |
           ./ci/run-provider-proxy.sh ci
 
+      - name: Run migrations
+        run: cargo run-e2e --run-migrations-only
+
       - name: Launch the gateway for E2E tests
         run: |
           TENSORZERO_E2E_PROXY="http://localhost:3003" cargo run-e2e > e2e_logs.txt 2>&1 &
