--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "tensorzero-core",
     "tensorzero-core/tests/mock-inference-provider",
+    "tensorzero-core/tests/load/rate-limit-load-test",
     "gateway",
     "internal/tensorzero-node",
     "clients/rust",
@@ -34,6 +35,7 @@ tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
 toml = "0.9.5"
 reqwest-eventsource = "0.6.0"
 async-stream = "0.3.5"
+async-trait = "0.1.89"
 http = "1.3.1"
 tokio-stream = "0.1.15"
 tokio = { version = "1.46.1", features = ["full"] }
@@ -66,6 +68,7 @@ tower-http = { version = "0.6.6", features = ["trace"] }
 mime = { git = "https://github.com/hyperium/mime", rev = "1ef137c7358fc64e07c8a640e4e9ba2a784b7f7d", features = [
     "serde1",
 ] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono"] }
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
