--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -38,9 +38,10 @@ test-e2e-no-creds = [
     "e2e_tests",
     "--profile",
     "clickhouse",
-]
+    ]
 test-rate-limit-load = [
     "run",
+    "--release",
     "--package",
     "rate-limit-load-test",
     "--",
