fixed cargo deny issues

--- a/tensorzero-core/tests/load/rate-limit-load-test/Cargo.toml
+++ b/tensorzero-core/tests/load/rate-limit-load-test/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 license.workspace = true
 
 [dependencies]
-tensorzero-core = { path = "../../../", features = ["e2e_tests"] }
+tensorzero-core = { path = "../../../" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
