--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -184,7 +184,7 @@ jobs:
           TENSORZERO_CLICKHOUSE_URL: "http://chuser:chpassword@localhost:8123/tensorzero_ui_fixtures"
           # These 2 vars are set so the env.server code doesn't complain
           TENSORZERO_UI_CONFIG_PATH: "ui/fixtures/config/tensorzero.toml"
-          TENSORZERO_GATEWAY_URL: "placeholder" # these
+          TENSORZERO_GATEWAY_URL: "placeholder"
         run: pnpm ui:test:e2e --grep-invert "@credentials"
 
       - name: Print Docker Compose logs
