--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -255,6 +255,10 @@ jobs:
         id: e2e_tests_credentials
         env:
           TENSORZERO_CI: 1
+          TENSORZERO_CLICKHOUSE_URL: "http://chuser:chpassword@localhost:8123/tensorzero_ui_fixtures"
+          # These 2 vars are set so the env.server code doesn't complain
+          TENSORZERO_UI_CONFIG_PATH: "ui/fixtures/config/tensorzero.toml"
+          TENSORZERO_GATEWAY_URL: "placeholder" # these
         run: pnpm ui:test:e2e --grep "@credentials"
 
       - name: Print docker compose logs
