--- a/tensorzero-core/tests/e2e/docker-compose.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.yml
@@ -22,13 +22,25 @@ services:
     image: tensorzero/gateway:${TENSORZERO_GATEWAY_TAG:-latest}
     environment:
       TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero_e2e_tests}
-      TENSORZERO_POSTGRES_URL: postgres://postgres:postgres@postgres:5432/${TENSORZERO_E2E_TESTS_DATABASE:-tensorzero-e2e-tests}
     depends_on:
       clickhouse:
         condition: service_healthy
-    command: ["--run-migrations-only"]
+    command: ["--default-config"]
     extra_hosts:
       - "howdy.tensorzero.com:127.0.0.1"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:3000/health",
+        ]
+      start_period: 1s
+      start_interval: 1s
+      timeout: 1s
   fixtures:
     build:
       dockerfile: ui/fixtures/Dockerfile
@@ -44,7 +56,7 @@ services:
       - TENSORZERO_SKIP_LARGE_FIXTURES
     depends_on:
       gateway:
-        condition: service_completed_successfully
+        condition: service_healthy
     # Keep this running to make 'check-docker-compose.sh' detect that all containers are healthy
     command:
       [
