added load testing for postgres rate limit queries (#3624)
* added load testing for postgres rate limit queries

* added new files

* fixed clippies

* updated documentation and added release build flag

* fixed error in readme

* fixed cargo deny issues

* fixed PR comments

* improved documentation of rate limiting load test

* reverted change to docker compose file

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -38,6 +38,13 @@ test-e2e-no-creds = [
     "e2e_tests",
     "--profile",
     "clickhouse",
+    ]
+test-rate-limit-load = [
+    "run",
+    "--release",
+    "--package",
+    "rate-limit-load-test",
+    "--",
 ]
 
 
