--- a/examples/optimization/dicl/config/tensorzero.toml
+++ b/examples/optimization/dicl/config/tensorzero.toml
@@ -7,6 +7,7 @@ type = "chat_completion"
 model = "openai::gpt-4.1-nano-2025-04-14"
 json_mode = "strict"
 system_template = "functions/classify_spam/baseline/system_template.txt"
+retries = { num_retries = 2 }
 
 [functions.classify_spam.variants.dicl]
 type = "experimental_dynamic_in_context_learning"
@@ -15,3 +16,4 @@ embedding_model = "openai::text-embedding-3-small"
 k = 10
 json_mode = "strict"
 system_instructions = "functions/classify_spam/baseline/system_template.txt"
+retries = { num_retries = 2 }
