--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,9 @@ match_same_arms = "allow"
 must_use_candidate = "allow"
 single_match_else = "allow"
 
+# This lint cannot be fixed with 'cargo fmt', and we don't currently generate docs
+doc_lazy_continuation = "allow"
+
 [profile.performance]
 inherits = "release"
 lto = "fat"
