--- a/examples/docs/guides/gateway/create-a-prompt-template/docker-compose.yml
+++ b/examples/docs/guides/gateway/create-a-prompt-template/docker-compose.yml
@@ -29,6 +29,27 @@ services:
       - "3000:3000"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:3000/health
+      start_period: 1s
+      start_interval: 1s
+      timeout: 1s
     depends_on:
       clickhouse:
+        condition: service_healthy
+
+  ui:
+    image: tensorzero/ui
+    volumes:
+      - ./config:/app/config:ro
+    environment:
+      OPENAI_API_KEY: ${OPENAI_API_KEY:?Environment variable OPENAI_API_KEY must be set.}
+      TENSORZERO_CLICKHOUSE_URL: http://chuser:chpassword@clickhouse:8123/tensorzero
+      TENSORZERO_GATEWAY_URL: http://gateway:3000
+    ports:
+      - "4000:4000"
+    depends_on:
+      clickhouse:
+        condition: service_healthy
+      gateway:
         condition: service_healthy
