banned backon retries in codebase

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ unsafe_code = "forbid"
 [workspace.lints.clippy]
 allow_attributes = "deny"
 dbg_macro = "deny"
+disallowed-types = "deny"
 # NB: Slowly making progress towards:
 # doc_markdown = "deny"
 expect_used = "deny"
