--- a/clippy.toml
+++ b/clippy.toml
@@ -2,3 +2,6 @@ allow-expect-in-tests = true
 allow-panic-in-tests = true
 allow-unwrap-in-tests = true
 doc-valid-idents = ["TensorZero", "ClickHouse", ".."]
+disallowed-types = [
+    { path = "backon::Retryable", reason = "Use the retry functionality in tensorzero-core/src/utils/retries.rs instead" },
+]
