--- a/.github/workflows/slack-notifications.yml
+++ b/.github/workflows/slack-notifications.yml
@@ -10,7 +10,7 @@ on:
     types: [opened]
   issue_comment:
     types: [created]
-  pull_request:
+  pull_request_target:
     types: [opened]
   pull_request_review_comment:
     types: [created]
@@ -93,7 +93,7 @@ jobs:
             }
 
       - name: Send Slack notification for new pull request
-        if: steps.check-skip.outputs.should_skip == 'false' && github.event_name == 'pull_request' && github.event.action == 'opened'
+        if: steps.check-skip.outputs.should_skip == 'false' && github.event_name == 'pull_request_target' && github.event.action == 'opened'
         uses: slackapi/slack-github-action@v2.1.1
         with:
           method: chat.postMessage
