--- a/.github/workflows/slack-notifications.yml
+++ b/.github/workflows/slack-notifications.yml
@@ -12,6 +12,8 @@ on:
     types: [created]
   pull_request_target:
     types: [opened]
+  pull_request_review:
+    types: [submitted]
   pull_request_review_comment:
     types: [created]
   discussion:
