--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -109,7 +109,7 @@ scoped-tls = "1.0.1"
 opentelemetry_sdk = "0.30.0"
 opentelemetry = "0.30.0"
 tracing-opentelemetry = "0.31.0"
-opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
+opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "tls", "tls-roots"] }
 opentelemetry-semantic-conventions = "0.30.0"
 init-tracing-opentelemetry = "0.30.1"
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
