Improvements to Slack bot filtering

--- a/.github/workflows/slack-notifications.yml
+++ b/.github/workflows/slack-notifications.yml
@@ -31,17 +31,25 @@ jobs:
           SKIP_USERS="${{ vars.SLACK_NOTIFICATION_SKIP_USERS }}"
           ACTOR="${{ github.actor }}"
 
+          # Check if user is a bot (ends with [bot], case insensitive)
+          ACTOR_LOWER=$(echo "$ACTOR" | tr '[:upper:]' '[:lower:]')
+          if [[ "$ACTOR_LOWER" == *"[bot]" ]]; then
+            echo "should_skip=true" >> $GITHUB_OUTPUT
+            echo "Skipping notification for bot user: $ACTOR"
+            exit 0
+          fi
+
           if [ -z "$SKIP_USERS" ]; then
             echo "should_skip=false" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          # Convert comma-separated list to array and check if actor is in the list
+          # Convert comma-separated list to array and check if actor is in the list (case insensitive)
           IFS=',' read -ra SKIP_ARRAY <<< "$SKIP_USERS"
           for skip_user in "${SKIP_ARRAY[@]}"; do
-            # Trim whitespace
-            skip_user=$(echo "$skip_user" | xargs)
-            if [ "$skip_user" = "$ACTOR" ]; then
+            # Trim whitespace and convert to lowercase
+            skip_user=$(echo "$skip_user" | xargs | tr '[:upper:]' '[:lower:]')
+            if [ "$skip_user" = "$ACTOR_LOWER" ]; then
               echo "should_skip=true" >> $GITHUB_OUTPUT
               echo "Skipping notification for user: $ACTOR"
               exit 0
