--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -46,6 +46,13 @@ test-rate-limit-load = [
     "rate-limit-load-test",
     "--",
 ]
+test-feedback-load = [
+    "run",
+    "--release",
+    "--package",
+    "feedback-load-test",
+    "--",
+]
 
 
 build-e2e = "build --bin gateway --features e2e_tests"
